chore: add connection strings and env variables

--- a/api/appsettings.json
+++ b/api/appsettings.json
@@ -1,5 +1,8 @@
 {
-  "Logging": {
+    "ConnectionStrings": {
+        "DefaultConnection":"Data Source=localhost;Initial Catalog=picpayDB;User Id=sa;Password=StrongPass123!@$;Integrated Security=True;TrustServerCertificate=true;Trusted_Connection=false"
+    },
+    "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
