feat: implement authorization

--- a/api/appsettings.json
+++ b/api/appsettings.json
@@ -2,6 +2,10 @@
     "ConnectionStrings": {
         "DefaultConnection":"Data Source=localhost;Initial Catalog=picpayDB;User Id=sa;Password=StrongPass123!@$;Integrated Security=True;TrustServerCertificate=true;Trusted_Connection=false"
     },
+    "externalServices": {
+        "authorization": "https://util.devi.tools/api/v2/authorize",
+        "notification": "https://util.devi.tools/api/v1/notify"
+    },
     "Logging": {
     "LogLevel": {
       "Default": "Information",
